# simple

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  cpp.hint  说明.md
config/: client.toml  client_log.toml  log.toml  log_test.toml  server.toml  test.toml
example/test1/: CMakeLists.txt  test1.cpp
example/test2/: CMakeLists.txt  test2.cpp
executor/: main.cpp
gobang/center/: CMakeLists.txt  center.cpp  center.h
gobang/client/: CMakeLists.txt  client.cpp  client.h
gobang/db_proxy/: CMakeLists.txt  db_proxy.cpp  db_proxy.h
gobang/gate/: CMakeLists.txt  gate.cpp  gate.h  local_listener.cpp  local_listener.h  local_service.cpp  local_service.h  master_connector.cpp  master_connector.h  remote_connector.cpp  remote_connector.h  remote_gate.cpp  remote_gate.h  remote_listener.cpp  remote_listener.h  service_info.cpp  service_info.h
gobang/gate_master/: CMakeLists.txt  gate_master.cpp  gate_master.h
gobang/kernel/: CMakeLists.txt  gate_connector.cpp  gate_connector.h  headers.hpp  proto_utils.cpp  proto_utils.h
gobang/login/: CMakeLists.txt  login.cpp  login.h
gobang/proto/: CMakeLists.txt  generate.bat  msg_base.proto  msg_server.pb.cc  msg_server.pb.h  msg_server.proto
gobang/proxy/: CMakeLists.txt  proxy.cpp  proxy.h
model/kernel/: gate_connector.cpp  gate_connector.h  headers.hpp  kernel.hpp  proto_rpc.cpp  proto_rpc.h  proto_utils.cpp  proto_utils.h
model/proto/: CMakeLists.txt  msg_base.pb.cc  msg_base.pb.h  msg_base.proto  msg_client.pb.cc  msg_client.pb.h  msg_client.proto  msg_ec.pb.cc  msg_ec.pb.h  msg_ec.proto  msg_id.pb.cc  msg_id.pb.h  msg_id.proto  msg_server.pb.cc  msg_server.pb.h  msg_server.proto
module/proto/: msg_base.pb.cc  msg_base.pb.h  msg_ec.pb.cc  msg_ec.proto  msg_server.pb.h  proto.hpp
runtime/: CMakeLists.txt
runtime/include/simple/: config.h  error.h
runtime/include/simple/application/: application.h  call_router.hpp  event_system.hpp  frame_awaiter.h  service.hpp
runtime/include/simple/containers/: buffer.hpp  heap.hpp  pool.hpp  queue.h  time_queue.h
runtime/include/simple/coro/: async_session.h  cancellation_registration.h  cancellation_source.h  cancellation_token.h  co_start.hpp  condition_variable.h  current_coroutine.hpp  detached_task.hpp  hash.hpp  mutex.h  network.h  parallel_task.hpp  scheduler.h  sync_wait.hpp  task.hpp  task_operators.hpp  thread_pool.h  timed_awaiter.h
runtime/include/simple/log/: appender.h  console_appender.h  default_flags.hpp  file_appender.h  flag.h  formatter.h  log.h  log_system.h  logger.h  logmsg.h  msvc_appender.h  types.h
runtime/include/simple/net/: socket_system.h  socket_types.h
runtime/include/simple/shm/: shm.h  shm_buffer.h  shm_channel.h  shm_channel_select.h
runtime/include/simple/utils/: coro_traits.hpp  crypt.h  fixed_string.hpp  func_traits.hpp  multiple_exceptions.hpp  os.h  time.h  toml_types.hpp  trie_ac.h  type_traits.hpp
runtime/include/simple/web/: http.h  websocket.h
runtime/src/: error.cpp
runtime/src/application/: application.cpp  frame_awaiter.cpp  service_loader.cpp  service_loader.h
runtime/src/containers/: queue.cpp  time_queue.cpp
runtime/src/coro/: async_session.cpp  cancellation_registration.cpp  cancellation_source.cpp  cancellation_state.cpp  cancellation_state.h  cancellation_token.cpp  condition_variable.cpp  mutex.cpp  network.cpp  scheduler.cpp  thread_pool.cpp  timed_awaiter.cpp
runtime/src/log/: appender.cpp  console_appender.cpp  file_appender.cpp  formatter.cpp  log.cpp  log_system.cpp  logger.cpp  msvc_appender.cpp  types.cpp
runtime/src/net/: socket_system.cpp
runtime/src/net/impl/: kcp_client_impl.cpp  kcp_client_impl.h  kcp_config.h  kcp_server_impl.cpp  kcp_server_impl.h  kcp_session_impl.cpp  kcp_session_impl.h  socket_impl.hpp  ssl_client_impl.cpp  ssl_client_impl.h  ssl_server_impl.cpp  ssl_server_impl.h  ssl_session_impl.cpp  ssl_session_impl.h  tcp_client_impl.cpp  tcp_client_impl.h  tcp_server_impl.cpp  tcp_server_impl.h  tcp_session_impl.cpp  tcp_session_impl.h
runtime/src/shm/: shm.cpp  shm_buffer.cpp  shm_channel.cpp  shm_channel_select.cpp  shm_channel_select.h
runtime/src/utils/: crypt.cpp  os.cpp  time.cpp  trie_ac.cpp
runtime/src/web/: http.cpp  websocket.cpp
service/gate/: CMakeLists.txt  local_listener.h  master_connector.h  remote_connector.h  remote_listener.cpp  remote_listener.h
service/gate_master/: gate_master.cpp  gate_master.h
service/test1/: CMakeLists.txt  test1.cpp
service/test2/: CMakeLists.txt  test2.cpp
test/: CMakeLists.txt  main.cpp  test_event.cpp  test_network.cpp  test_shm.cpp  test_task.cpp
